[gd_scene load_steps=2 format=3 uid="uid://dapuh3efjdkbu"]

[ext_resource type="Script" uid="uid://cefb0xy3tuug8" path="res://src/settings/settings.gd" id="1_38khj"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_38khj")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Settings
"

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="CursorLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Cursor Style:"

[node name="CursorOption" type="OptionButton" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="CursorPreview" type="RichTextLabel" parent="Panel/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Example"
fit_content = true

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="SaveBtn" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="CancelBtn" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="ResetBtn" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Reset to Default"

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
